@@ -13,7 +13,9 @@ public class ProductDAO {
     public static List<Product> getAll(){
         List<Product> product = JDBIConnector.me().withHandle(handle ->
                 handle.createQuery("select * from product")
-                        .mapToBean(Product.class).stream().collect(Collectors.toList())
+                        .mapToBean(Product.class)
+                        .stream()
+                        .toList()
         );
         return product;
     }
@@ -69,7 +71,7 @@ public class ProductDAO {
         }
     }
 
-    public static List<Product> findByCategory(String categoryID) {
+    public static List<Product> findByCategory(int categoryID) {
         List<Product> products = JDBIConnector.me().withHandle(handle ->
                 handle.createQuery("select * from product where categoryId = :id")
                         .bind("id", categoryID)
@@ -162,7 +164,7 @@ public class ProductDAO {
         return productZA;
     }
     //    Sắp xếp theo giá tăng dần theo category
-    public static List<Product> sortProductByCategoryAZ(String Categoryid){
+    public static List<Product> sortProductByCategoryAZ(int Categoryid){
         List<Product> productAZ = JDBIConnector.me().withHandle(handle ->
                 handle.createQuery("SELECT * FROM product WHERE categoryId = :id ORDER BY product.sellingPrice ASC")
                         .bind("id",Categoryid)
@@ -172,7 +174,7 @@ public class ProductDAO {
         return productAZ;
     }
     //    Sắp xếp theo giá giảm dần theo category
-    public static List<Product> sortProductByCategoryZA(String Categoryid){
+    public static List<Product> sortProductByCategoryZA(int Categoryid){
         List<Product> productZA = JDBIConnector.me().withHandle(handle ->
                 handle.createQuery("SELECT * FROM product WHERE categoryId = :id ORDER BY product.sellingPrice DESC")
                         .bind("id",Categoryid)
@@ -305,7 +307,7 @@ public class ProductDAO {
 
     public static void main(String[] args) {
 //        insertNewProduct("Chuối Noel", "hahaha", 55000, 60000, 2, "5", "1", new ArrayList<String>());
-        System.out.println(getProductBySubName("Black"));
+        System.out.println(findByCategory(1));
     }
 
 }
